quick fix for jobPage line chart was covering header

--- a/src/components/Job/JobForm.scss
+++ b/src/components/Job/JobForm.scss
@@ -16,7 +16,7 @@
     label {
       color: white;
       letter-spacing: 0.1rem;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       font-size: 1.5rem;
     }
     input {
@@ -40,5 +40,6 @@
   button {
     width: 100%;
     margin-top: 1rem;
+    font-size: 1.5rem;
   }
 }
